# aiproxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
app/: __init__.py  agent.py  auth.py  config.py  main.py  mcp_manager.py  state.py
app/backends/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
app/routes/: admin.py  chat.py
docs/: index.html
examples/: echo_mcp_server.py
scripts/: smoke_test.py  test_auth.py
